# CNNFeaturesRobustness

./: README.md  config.sh  prepare.sh  run.sh
features_benchmark/: .gitignore  CMakeLists.txt
features_benchmark/src/: Benchmark.cpp  Benchmark.h  BenchmarkStats.cpp  BenchmarkStats.h  CnnCode.cpp  CnnCode.h  CnnFeatures.cpp  CnnFeatures.h  FeaturesHdf5IO.cpp  FeaturesHdf5IO.h  FeaturesIndex.cpp  FeaturesIndex.h  Index.h  main.cpp
features_benchmark/test/: test.cpp
features_distances/: CMakeLists.txt  CnnFeatures.cpp  CnnFeatures.h  Features.cpp  Features.h  FeaturesHdf5IO.cpp  FeaturesHdf5IO.h  main.cpp
features_extractor/: image_features.py  main.py
plot/: distributions.pg  threshold.pg
